--- a/index.html
+++ b/index.html
@@ -30,14 +30,84 @@
         -webkit-user-drag: none;
         will-change: transform;
         pointer-events: none;
+        z-index: 5;
+        filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.5));
+      }
+
+      #date-banner {
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 10px 14px;
+        font: 500 14px/1.2 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
+          Cantarell, Noto Sans, Helvetica, Arial, sans-serif;
+        letter-spacing: 0.01em;
+        color: rgba(255, 255, 255, 0.92);
+        font-size: 40pt;
+        text-align: center;
+        background: linear-gradient(
+          to top,
+          rgba(0, 0, 0, 0.72),
+          rgba(0, 0, 0, 0.18)
+        );
+        backdrop-filter: blur(6px);
+        -webkit-backdrop-filter: blur(6px);
+        z-index: 10;
+        user-select: none;
+        pointer-events: none;
+      }
+
+      #date-banner[hidden] {
+        display: none;
       }
     </style>
   </head>
   <body>
     <img id="logo" src="stang.svg" alt="stang" draggable="false" />
+    <div id="date-banner" role="status" aria-live="polite" hidden></div>
     <script>
       (() => {
         const logo = document.getElementById("logo");
+        const banner = document.getElementById("date-banner");
+
+        // Dict: keys are MM-DD (local date), values are the banner text.
+        const messagesByDate = {
+          "02-05": "Happy Anniversary, Tristan!",
+          "02-05": "Happy Birthday, Josh!",
+          "04-15": "Happy Birthday, Violet!",
+          "05-13": "Happy Birthday, Tristan!",
+          "06-04": "Happy Anniversary, Violet!",
+          "12-29": "Happy Anniversary, Josh!",
+        };
+
+        function pad2(n) {
+          return String(n).padStart(2, "0");
+        }
+
+        function formatLocalDateMMDD(d) {
+          return `${pad2(d.getMonth() + 1)}-${pad2(d.getDate())}`;
+        }
+
+        function setBannerForToday() {
+          const key = formatLocalDateMMDD(new Date());
+          const message = messagesByDate[key] ?? messagesByDate.default ?? "";
+          if (!message) {
+            banner.hidden = true;
+            banner.textContent = "";
+            return;
+          }
+          banner.textContent = message;
+          banner.hidden = false;
+        }
+
+        function getBannerHeight() {
+          if (banner.hidden) return 0;
+          return banner.getBoundingClientRect().height;
+        }
+
+        setBannerForToday();
+
         const reduceMotion =
           window.matchMedia &&
           window.matchMedia("(prefers-reduced-motion: reduce)").matches;
@@ -64,7 +134,7 @@
         function clampPosToViewport() {
           const { w, h } = getBounds();
           const vw = window.innerWidth;
-          const vh = window.innerHeight;
+          const vh = Math.max(0, window.innerHeight - getBannerHeight());
           x = Math.max(0, Math.min(vw - w, x));
           y = Math.max(0, Math.min(vh - h, y));
         }
@@ -81,7 +151,7 @@
 
           const { w, h } = getBounds();
           const vw = window.innerWidth;
-          const vh = window.innerHeight;
+          const vh = Math.max(0, window.innerHeight - getBannerHeight());
 
           x = rand(0, Math.max(0, vw - w));
           y = rand(0, Math.max(0, vh - h));
@@ -99,7 +169,7 @@
         function bounce() {
           const { w, h } = getBounds();
           const vw = window.innerWidth;
-          const vh = window.innerHeight;
+          const vh = Math.max(0, window.innerHeight - getBannerHeight());
 
           if (x <= 0) {
             x = 0;
