--- a/bouncy/index.html
+++ b/bouncy/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>stang screensaver</title>
+    <title>stang bouncy</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <img id="logo" class="ball" src="stang.svg" alt="stang" draggable="false" />
+    <img id="logo" class="ball" src="../stang.svg" alt="stang" draggable="false" />
     <div id="date-banner" role="status" aria-live="polite" hidden></div>
-    <script src="messages.js" defer></script>
+    <script src="../messages.js" defer></script>
     <script src="app.js" defer></script>
   </body>
 </html>
